--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "Arad Tenenbaum",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "pg": "^8.5.1"
   }
